--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -7,6 +7,7 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body{
@@ -119,6 +120,7 @@ nav{
     }
     & .explore-btn{
         justify-self: center;
+        padding: 40px;
     }
     & button{
         height: 125px;
@@ -137,7 +139,6 @@ nav{
         border: 1px solid white;
     }
     & .explore-btn:hover{
-        padding: 40px;
         border-radius: 50%;
         background-color: rgba(15, 15, 15, 0.327);
     }
@@ -173,7 +174,6 @@ nav{
     & .container-image{
         margin: 20px auto;
         max-width: 200px;
-        width: 100%;
         height: 100%;
     }
     & img{
@@ -533,12 +533,16 @@ nav{
 
         & .explore-btn{
             grid-row: 2;
+            max-height: 250px;
+            max-width: 250px;
+            width: 100%;
+            height: 100%;
         }
         & .explore-btn button{
-            height: 250px;
-            width: 250px;
+            width: 100%;
+            height: 100%;
             font-family: 'Bellefair', serif;
-            font-size: 2em;
+            font-size: 1.5em;
         }
     }
 /* Destination */
@@ -768,6 +772,7 @@ nav{
         position: relative;
         transform: unset;
         width: 55%;
+        height: 80px;
         background-color: rgba(176, 176, 176, 0.116);
         backdrop-filter: blur(15px);
         & ul{
